--- a/src/main/resources/templates/admin-login.html
+++ b/src/main/resources/templates/admin-login.html
@@ -12,6 +12,9 @@
     <div class="col-md-6">
       <h2 class="mb-3">Logowanie administratora</h2>
       <form th:action="@{/login}" method="post">
+        <!-- Dodaj pole dla CSRF tokena -->
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
         <div class="form-group">
           <label for="username">Użytkownik</label>
           <input type="text" class="form-control" id="username" name="username" placeholder="Wprowadź nazwę użytkownika">
