--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,7 @@
       </div>
       <div class="text-right">
         <a href="admin-login.html" class="btn btn-outline-light">Zaloguj się jako administrator</a>
+<!--        <a th:href="@{/admin-login}" class="btn btn-outline-light">Zaloguj się jako administrator</a>-->
       </div>
     </div>
   </div>
