Działa Logowanie Host8080

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
         <p class="lead">Twoja przygoda zaczyna się tutaj</p>
       </div>
       <div class="text-right">
-        <a href="admin-login.html" class="btn btn-outline-light">Zaloguj się jako administrator</a>
+        <a href="../static/admin-login.html" class="btn btn-outline-light">Zaloguj się jako administrator</a>
 <!--        <a th:href="@{/admin-login}" class="btn btn-outline-light">Zaloguj się jako administrator</a>-->
       </div>
     </div>
@@ -32,7 +32,7 @@
         <div class="card-body">
           <h5 class="card-title">Egzotyczna podróż</h5>
           <p class="card-text">Niezapomniana przygoda w odległych zakątkach świata.</p>
-          <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+          <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
         </div>
       </div>
     </div>
@@ -43,7 +43,7 @@
         <div class="card-body">
           <h5 class="card-title">Relaksujący wypoczynek</h5>
           <p class="card-text">Spędź czas na plaży i ciesz się słońcem.</p>
-          <a href="tour-details1.html" class="btn btn-primary">Zobacz szczegóły</a>
+          <a href="../static/tour-details1.html" class="btn btn-primary">Zobacz szczegóły</a>
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
           <div class="card-body">
             <h5 class="card-title">Odkrywanie Europy</h5>
             <p class="card-text">Zwiedzanie kulturowych skarbów europejskich miast.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@
           <div class="card-body">
             <h5 class="card-title">Egzotyczna przygoda w Indonezji</h5>
             <p class="card-text">Odkryj uroki egzotycznej przyrody i kultury Indonezji.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -121,7 +121,7 @@
           <div class="card-body">
             <h5 class="card-title">Podróże po Japonii</h5>
             <p class="card-text">Zanurz się w fascynującej kulturze i tradycji Japonii.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -131,7 +131,7 @@
           <div class="card-body">
             <h5 class="card-title">Safari w Afryce Południowej</h5>
             <p class="card-text">Observe wildlife in its natural habitat on an unforgettable safari.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -141,7 +141,7 @@
           <div class="card-body">
             <h5 class="card-title">Przygoda w Brazylii</h5>
             <p class="card-text">Discover the vibrant culture and natural beauty of Brazil.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -151,7 +151,7 @@
           <div class="card-body">
             <h5 class="card-title">Szlakiem Francuskich Smaków</h5>
             <p class="card-text">Odkryj wyjątkową kuchnię i kulturę Francji.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -169,7 +169,7 @@
           <div class="card-body">
             <h5 class="card-title">Europejska odyseja</h5>
             <p class="card-text">Zwiedzanie kulturowych skarbów europejskich miast.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@
           <div class="card-body">
             <h5 class="card-title">Odkrywanie Ameryki Północnej</h5>
             <p class="card-text">Przemierzaj krajobrazy i miasta Ameryki Północnej.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -191,7 +191,7 @@
           <div class="card-body">
             <h5 class="card-title">Afrykańska przygoda</h5>
             <p class="card-text">Odkryj fascynujące krajobrazy i kultury Afryki.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -202,7 +202,7 @@
           <div class="card-body">
             <h5 class="card-title">Podróże po Azji</h5>
             <p class="card-text">Zanurz się w bogatej kulturze i krajobrazach Azji.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -213,7 +213,7 @@
           <div class="card-body">
             <h5 class="card-title">Przygoda w Ameryce Południowej</h5>
             <p class="card-text">Odkryj różnorodność i uroki Ameryki Południowej.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -224,7 +224,7 @@
           <div class="card-body">
             <h5 class="card-title">Odkrywanie Australii i Oceanii</h5>
             <p class="card-text">Zwiedzaj rajskie plaże i egzotyczne wyspy Australii i Oceanii.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -242,7 +242,7 @@
           <div class="card-body">
             <h5 class="card-title">Polska odkrywajka</h5>
             <p class="card-text">Zwiedzaj malownicze miasta i przyrodę Polski.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -253,7 +253,7 @@
           <div class="card-body">
             <h5 class="card-title">Francuska przygoda</h5>
             <p class="card-text">Odkryj uroki kultury i smaków Francji.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -264,7 +264,7 @@
           <div class="card-body">
             <h5 class="card-title">Dolce Vita we Włoszech</h5>
             <p class="card-text">Przemierzaj włoskie miasta i smakuj najlepsze pasty.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -275,7 +275,7 @@
           <div class="card-body">
             <h5 class="card-title">Gorąca przygoda w Hiszpanii</h5>
             <p class="card-text">Odkryj tajemnice kultury i kuchni Hiszpanii.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -286,7 +286,7 @@
           <div class="card-body">
             <h5 class="card-title">Niemiecka odyseja</h5>
             <p class="card-text">Zwiedzaj zameki i miasta Niemiec.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -297,7 +297,7 @@
           <div class="card-body">
             <h5 class="card-title">Angielska opowieść</h5>
             <p class="card-text">Odkryj tajemnice krainy królowej Elżbiety.</p>
-            <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+            <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
           </div>
         </div>
       </div>
@@ -314,7 +314,7 @@
         <div class="card-body">
           <h5 class="card-title">Ekskluzywna przygoda</h5>
           <p class="card-text">Luksusowe wakacje w pięciogwiazdkowym kurorcie.</p>
-          <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+          <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
         </div>
       </div>
     </div>
@@ -324,7 +324,7 @@
         <div class="card-body">
           <h5 class="card-title">Przygoda w górach</h5>
           <p class="card-text">Aktywny wypoczynek w górskich regionach.</p>
-          <a href="tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
+          <a href="../static/tour-details.html" class="btn btn-primary">Zobacz szczegóły</a>
         </div>
       </div>
     </div>
