--- a/src/main/resources/templates/admin-login.html
+++ b/src/main/resources/templates/admin-login.html
@@ -13,7 +13,7 @@
       <h2 class="mb-3">Logowanie administratora</h2>
       <form th:action="@{/login}" method="post">
         <!-- Dodaj pole dla CSRF tokena -->
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+<!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
 
         <div class="form-group">
           <label for="username">Użytkownik</label>
