--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,8 +15,8 @@
         <p class="lead">Twoja przygoda zaczyna się tutaj</p>
       </div>
       <div class="text-right">
-        <a href="../static/admin-login.html" class="btn btn-outline-light">Zaloguj się jako administrator</a>
-<!--        <a th:href="@{/admin-login}" class="btn btn-outline-light">Zaloguj się jako administrator</a>-->
+<!--        <a href="admin-login.html" class="btn btn-outline-light">Zaloguj się jako administrator</a>-->
+        <a th:href="@{/admin-login}" class="btn btn-outline-light">Zaloguj się jako administrator</a>
       </div>
     </div>
   </div>
