--- a/src/main/resources/templates/admin-login.html
+++ b/src/main/resources/templates/admin-login.html
@@ -26,7 +26,7 @@
         <button type="submit" class="btn btn-primary">Zaloguj się</button>
       </form>
       <!-- Po zalogowaniu administratora, dodaj przekierowanie -->
-      <div th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="mt-3">
+      <div th:if="${#authorization.expression('hasRole(''ADMIN'')')}" class="mt-3">
         <a th:href="@{/configure-offer}" class="btn btn-primary">Przejdź do konfiguracji oferty</a>
       </div>
     </div>
