--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,22 @@
   </div>
 </header>
 
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <!-- Wyświetlanie wiadomości, jeśli jest dostępna w modelu -->
+      <th:block th:if="${message}">
+        <div class="alert alert-success" role="alert">
+          <p th:text="${message}"></p>
+        </div>
+      </th:block>
+      <!-- Reszta zawartości strony -->
+      <!-- ... -->
+    </div>
+  </div>
+</div>
+
+
 <section class="container my-5">
   <h2 class="mb-4">Promowane wycieczki</h2>
   <div class="row">
